namespace/dpm01-ops.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ops
  name: busybox
spec:
  replicas: 3
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: busybox
        image: busybox:latest
        command: ["sh", "-c", "sleep 3000"]
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
