namespace/dpm01-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: test
  name: myweb
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myweb
  template:
    metadata:
      labels:
        app: myweb
    spec:
      containers:
      - name: myweb
        image: techwithnc/sampleweb:1.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
