namespace/dpm02-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: deploy02-dev-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websvr02
  template:
    metadata:
      labels:
        app: websvr02
    spec:
      containers:
      - name: websvr
        image: techwithnc/nginx:4.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
