namespace/svc01-test.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: test
  name: svc01-test-ns
spec:
  type: NodePort
  selector:
    app: myweb
  ports:
  - port: 3002
    targetPort: 80
    nodePort: 30200
