namespace/svc02-dev.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: svc02-dev-ns
spec:
  selector:
    app: websvr02
  ports:
  - port: 3002
    targetPort: 80
